# usac

./: README.md
include/: CircleEstimator.h  CircleFittingFunctions.h  ConfigParams.h  ConfigParamsHomog.h  FundmatrixEstimator.h  HomogEstimator.h  HomographyFunctions.h  MathFunctions.h  USAC.h
src/: CMakeLists.txt  CircleFittingFunctions.cpp  ConfigParams.cpp  ConfigParamsHomog.cpp  FundmatrixFunctions.cpp  MathFunctions.cpp
test/: CMakeLists.txt  circleFittest.cpp  circleFittest.h  circleFittingtestcases.test  homographytest.cpp  homographytest.h  homographytestcases.test  runAllTests.cpp  usacmethod.cpp  usacmethod.h
test/data/: appartment.img  appartment.ref  appartment.res  grafitti1and2.img  grafitti1and2.ref  grafitti1and2.res  nonoise.img  nonoise.ref  nonoise.res  random50.img  random50.ref  random50.res
